{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 35,
  "lineage": "21cca3a3-d740-789d-5a3a-5c476a56d9dc",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:260320279955:security-group/sg-0d82ffb13a53378aa",
            "description": "default VPC security group",
            "filter": [
              {
                "name": "group-name",
                "values": [
                  "default"
                ]
              }
            ],
            "id": "sg-0d82ffb13a53378aa",
            "name": "default",
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0c505b7cac3ddc9cf"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "selected_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:260320279955:subnet/subnet-067e526fdc6b6e07f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "available_ip_address_count": 4090,
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067e526fdc6b6e07f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "260320279955",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "vpc_id": "vpc-0c505b7cac3ddc9cf"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:260320279955:vpc/vpc-0c505b7cac3ddc9cf",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-07a3a7c48cb68b626",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-041f5470424805061",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c505b7cac3ddc9cf",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0de07b62392fac580",
            "owner_id": "260320279955"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_web_access_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:260320279955:security-group/sg-05cd786691c73ab08",
            "description": "Allow inbound traffic on port 8000 and outbound traffic to 0.0.0.0/0",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05cd786691c73ab08",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "ecs_web_access_sg",
            "name_prefix": "",
            "owner_id": "260320279955",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "fastapi_service",
              "Environment": "dev",
              "Name": "ecs_web_access_sg"
            },
            "tags_all": {
              "Application": "fastapi_service",
              "Environment": "dev",
              "Name": "ecs_web_access_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c505b7cac3ddc9cf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}